Fix Image not Showing on Firefox

--- a/public/css/why.css
+++ b/public/css/why.css
@@ -96,7 +96,7 @@ h2.blocktext-2{
 
 
 .blocktext-background{
-    background-image: url(../img/why-ibinex/s1.webp);
+    background-image: url(../img/why-ibinex/s1.png);
     height: 765px;
     width:100%;
     /*zoom: 0.6;*/
